--- a/courses/MathematicalMethods/pages/MathematicalStructures/1_terminology.html
+++ b/courses/MathematicalMethods/pages/MathematicalStructures/1_terminology.html
@@ -60,7 +60,7 @@
                     <ol><li class="no-marker"><b>Proposition</b> - A less significant yet intriguing true statement.</li></ol>
                     <ol><li class="no-marker"><b>Lemma</b> - A true statement that is utilized in proving other true statements, serving as a less significant theorem that aids in the proof of other findings.</li></ol>
                     <ol><li class="no-marker"><b>Corollary</b> - A true statement that is a trivial conclusion drawn from a theorem or proposition.</li></ol>
-                    If the proof a theorem is lengthy, some mathematicians may choose to prove a lemma prior to introducing the theorem, this way the proof of the lemma can be referenced in the proof of the theorem and thus shorten the proof's length.
+                    If the proof of a theorem is lengthy, some mathematicians may choose to prove a lemma prior to introducing the theorem, this way the proof of the lemma can be referenced in the proof of the theorem and thus shorten the proof's length.
                 </p>
                 <p>
                     <u><b id="math_symbols">[i] Mathematical Symbols</b></u>
