--- a/courses/MathematicalMethods/pages/MathematicalStructures/1_terminology.html
+++ b/courses/MathematicalMethods/pages/MathematicalStructures/1_terminology.html
@@ -46,8 +46,8 @@
                     A few common terms, and their definitions, as seen in <a href="../sources.html#duncan_dl">[1]</a>:
                     <ol><li class="no-marker"><b>Definition</b> - An explanation of the <i>mathematical</i> meaning of a word.</li></ol>
                     <ol><li class="no-marker"><b>Statement</b> - A sentence that can be either true or false, but not both simultaneously.</li></ol>
-                    I realized I've given a definition to the word definition, but realize that we are not only giving an explanation of a word, but a mathematical explanation of the word.
-                    This will soon make sense.
+                    I realized I've given a definition to the word 'definition,' but note that we are not only giving an explanation of a word, but a <i>mathematical</i> explanation of the word.
+                    It's different; trust me.
                     <ol><li class="no-marker"><b>Axiom</b> - A basic assumption about mathematical nature.</li></ol>
                     Think of axioms as the building blocks of mathematics.
                     These are things that come intuitively to even those not mathematically "advanced," such as the distrubitive property: for some numbers \(a, b, c\), the following property holds, \(a(b+c) = ab + ac\).
