Added to section 1 of Math Methods course

--- a/courses/MathematicalMethods/pages/MathMethods.html
+++ b/courses/MathematicalMethods/pages/MathMethods.html
@@ -67,6 +67,7 @@
                                 <ol type="i">
                                     <li><a class="lesson_links" href="MathematicalStructures/1_terminology.html#math_symbols">Mathematical Symbols</a></li>
                                 </ol>
+                                <li><a class="lesson_links" href="MathematicalStructures/2_logic.html">Sentential Logic</a></li>
                                 <li><a class="lesson_links" href="#">Mathematical Proof Techniques</a></li>
                                 <ol type="i">
                                     <li><a class="lesson_links" href="#">Direct</a></li>
@@ -84,13 +85,13 @@
                                 </ol>
                                 <br>
                             </ol>
-                        <li class="Lesson"><a class="lesson_links" href="#">Algebra</a></li>
+                        <li class="Lesson"><a class="lesson_links" href="Algebra/1_arithmetic-in-Z.html">Algebra</a></li>
                             <ol>
-                                <li><a class="lesson_links" href="#">Arithmetic in \(\mathbb{Z}\)</a></li>
+                                <li><a class="lesson_links" href="Algebra/1_arithmetic-in-Z.html">Arithmetic in \(\mathbb{Z}\)</a></li>
                                 <ol type="i">
-                                    <li><a class="lesson_links" href="#">The Division Algorithm</a></li>
-                                    <li><a class="lesson_links" href="#">Divisibility</a></li>
-                                    <li><a class="lesson_links" href="#">Primes and Unique Factorization</a></li>
+                                    <li><a class="lesson_links" href="Algebra/1_arithmetic-in-Z.html#division-algorithm">The Division Algorithm</a></li>
+                                    <li><a class="lesson_links" href="Algebra/1_arithmetic-in-Z.html">Divisibility</a></li>
+                                    <li><a class="lesson_links" href="Algebra/1_arithmetic-in-Z.html">Primes and Unique Factorization</a></li>
                                 </ol>
                                 <li><a class="lesson_links" href="#">Arithmetic in \(F[x]\)</a></li>
                                 <ol type="i">
