--- a/courses/MathematicalMethods/pages/MathematicalStructures/1_terminology.html
+++ b/courses/MathematicalMethods/pages/MathematicalStructures/1_terminology.html
@@ -5,7 +5,7 @@
         <meta name="author" content="Agustin Garcia Flores">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            Mathematical Structures | Mathematical Methods in Physics | MWi
+            An Introduction to Terminology | Mathematical Structures | Mathematical Methods in Physics | MWi
         </title>
         <link rel="stylesheet" href="../../../../styles/Main_Head.css">
         <link rel="stylesheet" href="../../../../styles/Body_style.css">
@@ -83,8 +83,8 @@
                 <button onclick="window.location.href='../MathMethods.html'" class="previous_button">
                     Previous: Mathematical Methods in Physics
                 </button>
-                <button onclick="window.location.href='MathInduction.html'" class="next_button">
-                    Next: Mathematical Induction
+                <button onclick="window.location.href='2_logic.html'" class="next_button">
+                    Next: Sentential Logic
                 </button>
             </div>
             <br><br>
