--- a/courses/MathematicalMethods/pages/sources.html
+++ b/courses/MathematicalMethods/pages/sources.html
@@ -47,6 +47,10 @@
                 </p>
                 <ol>
                     <li id="duncan_dl">Duncan, D. L. Lecture 16: Definitions, theorems, proofs meanings. <a href="https://users.math.msu.edu/users/duncan42/AxiomNotes.pdf">https://users.math.msu.edu/users/duncan42/AxiomNotes.pdf</a></li>
+                    <li id="velleman_dj">Velleman, D. J. (2006). Sentential Logic. In <i>How to prove it</i> (2nd ed., pp. 8-25). Cambridge University Press.</li>
+                    <li></li>
+                    <li id="hungerford_th_0">Hungerford, T. H. (2013). Arithmetic in Z Revisited. In <i>Abstract algebra: An introduction</i> (3rd ed., pp. 3-24). Brooks/Cole, Cengage Learning.</li>
+                    <li id="hungerford_th_1">Hungerford, T. H. (2013). Arithmetic in F[x]. In <i>Abstract algebra: An introduction</i> (3rd ed., pp. 85-124). Brooks/Cole, Cengage Learning.</li>
                 </ol>
             </div>
             <br><br>
