--- a/courses/SingleVariableCalc/pages/UndefinedLimits.html
+++ b/courses/SingleVariableCalc/pages/UndefinedLimits.html
@@ -50,11 +50,11 @@
                     \[
                         \lim_{x\to x_0} f(x) = f(x_0).
                     \]
-                    <u><b>Theorem:</u> Differentiable Implies Continuous</b>
-                    <br>
-                    <i>If a function \(f\) is differentiable at \(x_0\), then \(f\) is continuous at \(x_0\).</i> [What is does it
-                    mean to be differentiable? Come back to this after completing Lesson 3.]
-                    <br><br>
+                    <div class="definition">
+                        <b class="def_title">Theorem: Differentiable Implies Continuous</b>
+                        If a function \(f\) is differentiable at \(x_0\), then \(f\) is continuous at \(x_0\). [<i>What is does it
+                        mean to be differentiable? Come back to this after completing Lesson 3.</i>]
+                    </div>
                     <button id="button1" class="solutionButton">\(\rightarrow\) Proof</button>
                     <div id="text1" class="slideout">
                         [This proof assumes that you know and are comfortable with differentiation and its definition. If that is not the case, skip this for now.]
@@ -97,7 +97,6 @@
                         discontinuous at \(x=\alpha\) then \(f(x)\) is not differentiable at \(x=\alpha\).]
                         <br>
                     </div>
-                    <br>
                     To conclude the continuity section, there are four types of discontinuities that one should be aware of:
                     <ol>
                         <li>
@@ -199,5 +198,4 @@
         </div>
     </body>
     <script src="../../../javascript/solutionToggle.js"></script>
-
 </html>
