Added a QED to end proofs

--- a/courses/MathematicalMethods/pages/Algebra/1_arithmetic-in-Z.html
+++ b/courses/MathematicalMethods/pages/Algebra/1_arithmetic-in-Z.html
@@ -93,7 +93,7 @@
                     \]
                     Since \(q\) and \(q^\prime\) are both integers, \(q - q^\prime\) is an integer. The only integer between \(-1\) and \(1\) is zero, so \(q - q^\prime = 0 \Rightarrow q = q^\prime\).
                     Since \(b\left(q-q^\prime\right) = r^\prime - r \Rightarrow 0 = r^\prime - r \Rightarrow r = r^\prime\).
-                    Thus the quotient and remainder are unique.
+                    Thus the quotient and remainder are unique. &#9632;
                 </div>
                 <br>    
             </div>
