--- a/courses/SingleVariableCalc/pages/LimitOfAFunction.html
+++ b/courses/SingleVariableCalc/pages/LimitOfAFunction.html
@@ -165,7 +165,7 @@
                         \(\text{d. }\) Since this function is discontinuous, \(\lim_{x\to 3} m(x)\neq m(3)\). In fact, because the limit approaches different values
                         from each side, \(0\) from the left and \(-4\) from the right, the limit as \(x\) approaches \(3\) from both sides is <b>undefined</b>. 
                         This is because a limit must approach the same value from the left and the right, as stated before. We will go deeper into undefined limits
-                        in the next section so don't worry about this one too much for now.
+                        in the next section so don't worry about this one too much for now. &#9632;
                     </div>
                     <br>
                     Provided that a limit exists, it may ease the evaluation if the function under cosideration is split into a sum, product, or quotient. The rules
