--- a/courses/SingleVariableCalc/pages/UndefinedLimits.html
+++ b/courses/SingleVariableCalc/pages/UndefinedLimits.html
@@ -94,7 +94,7 @@
                         [This proof shows that if a function is differentiable then it is also continuous. That does not necessarily imply that if the function is not differentiable then it is also not continuous.
                         In essence, a function can be continuous and without being differentiable. Take the absolute value function for example, \(\lvert x\rvert\). Though it is not differentiable at \(x=0\), it is still
                         continuous. The function being differentiable is a <i>sufficient condition</i> for continuity, not a <i>necessary condition</i>. This theorem does however imply that if a function \(f(x)\) is 
-                        discontinuous at \(x=\alpha\) then \(f(x)\) is not differentiable at \(x=\alpha\).]
+                        discontinuous at \(x=\alpha\) then \(f(x)\) is not differentiable at \(x=\alpha\).] &#9632;
                         <br>
                     </div>
                     To conclude the continuity section, there are four types of discontinuities that one should be aware of:
