Worked on talks site

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                         </span>
 
                         <span class="masthead-bar__menu-item">
-                        <a class="link" href="/talks/talks.html">Talks</a>
+                        <a class="link" href="talks/talks.html">Talks</a>
                         </span>
 
                         <span class="masthead-bar__menu-item">
-                        <a class="link" href="/projects/">Projects</a>
+                        <a class="link" href="projects/">Projects</a>
                         </span>
 
                     </div>
@@ -108,7 +108,7 @@
                 Quantum networks, quantum cryptography<br>
                 </p>
 
-                <h3>Short CV</h3>
+                <h3>Education</h3>
                 <p>
                 <img src="images/asu.png" alt="mit" class="logo">
                 Arizona State University, August 2022 – May 2024<br>
