started notes section

--- a/talks/talks.html
+++ b/talks/talks.html
@@ -86,7 +86,7 @@
                         </span>
 
                         <span class="masthead-bar__menu-item">
-                        <a class="link" href="/projects/">Projects</a>
+                        <a class="link" href="../blog/blog.html">Fun</a>
                         </span>
 
                     </div>
