--- a/index.html
+++ b/index.html
@@ -23,50 +23,9 @@
         <link rel="canonical" href="https://agarciaflores.github.io/">
     </head>
 	<body>
-		<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-
-            <symbol id="icon-external" viewBox="0 0 1024 1024">
-                <path class="path1" d="M704 832h-512v-512h288l128-128h-544v768h768v-544l-128 128v288z"></path>
-                <path class="path2" d="M1024 0h-416l160 160-480 480 96 96 480-480 160 160v-416z"></path>
-            </symbol>
-
-            <symbol id="icon-arrow-left" viewBox="0 0 1024 1024">
-                <path class="path1" d="M672 1024l64-64-448-448 448-448-64-64-512 511.998 512 512.002z"></path>
-            </symbol>
-
-            <symbol id="icon-arrow-right" viewBox="0 0 1024 1024">
-                <path class="path1" d="M352 0l-64 64 448 448-448 448 64 64 512-511.998-512-512.002z"></path>
-            </symbol>
-
-            <symbol id="icon-search" viewBox="0 0 1024 1024">
-                <title>search</title>
-                <path class="path1" d="M992.262 871.396l-242.552-206.294c-25.074-22.566-51.89-32.926-73.552-31.926 57.256-67.068 91.842-154.078 91.842-249.176 0-212.078-171.922-384-384-384-212.076 0-384 171.922-384 384s171.922 384 384 384c95.098 0 182.108-34.586 249.176-91.844-1 21.662 9.36 48.478 31.926 73.552l206.294 242.552c35.322 39.246 93.022 42.554 128.22 7.356s31.892-92.898-7.354-128.22zM384 640c-141.384 0-256-114.616-256-256s114.616-256 256-256 256 114.616 256 256-114.614 256-256 256z"></path>
-            </symbol>
-
-            <symbol id="icon-cross" viewBox="0 0 1024 1024">
-                <title>cross</title>
-                <path class="path1" d="M1014.662 822.66c-0.004-0.004-0.008-0.008-0.012-0.010l-310.644-310.65 310.644-310.65c0.004-0.004 0.008-0.006 0.012-0.010 3.344-3.346 5.762-7.254 7.312-11.416 4.246-11.376 1.824-24.682-7.324-33.83l-146.746-146.746c-9.148-9.146-22.45-11.566-33.828-7.32-4.16 1.55-8.070 3.968-11.418 7.31 0 0.004-0.004 0.006-0.008 0.010l-310.648 310.652-310.648-310.65c-0.004-0.004-0.006-0.006-0.010-0.010-3.346-3.342-7.254-5.76-11.414-7.31-11.38-4.248-24.682-1.826-33.83 7.32l-146.748 146.748c-9.148 9.148-11.568 22.452-7.322 33.828 1.552 4.16 3.97 8.072 7.312 11.416 0.004 0.002 0.006 0.006 0.010 0.010l310.65 310.648-310.65 310.652c-0.002 0.004-0.006 0.006-0.008 0.010-3.342 3.346-5.76 7.254-7.314 11.414-4.248 11.376-1.826 24.682 7.322 33.83l146.748 146.746c9.15 9.148 22.452 11.568 33.83 7.322 4.16-1.552 8.070-3.97 11.416-7.312 0.002-0.004 0.006-0.006 0.010-0.010l310.648-310.65 310.648 310.65c0.004 0.002 0.008 0.006 0.012 0.008 3.348 3.344 7.254 5.762 11.414 7.314 11.378 4.246 24.684 1.826 33.828-7.322l146.746-146.748c9.148-9.148 11.57-22.454 7.324-33.83-1.552-4.16-3.97-8.068-7.314-11.414z"></path>
-            </symbol>
-
-            <symbol id="icon-bubble" viewBox="0 0 32 32">
-                <title>bubble</title>
-                <path class="path1" d="M16 6c-1.717 0-3.375 0.271-4.928 0.804-1.46 0.502-2.76 1.211-3.863 2.108-2.069 1.681-3.209 3.843-3.209 6.088 0 1.259 0.35 2.481 1.039 3.63 0.711 1.185 1.781 2.268 3.093 3.133 0.949 0.625 1.587 1.623 1.755 2.747 0.056 0.375 0.091 0.753 0.105 1.129 0.233-0.194 0.461-0.401 0.684-0.624 0.755-0.755 1.774-1.172 2.828-1.172 0.168 0 0.336 0.011 0.505 0.032 0.655 0.083 1.325 0.126 1.99 0.126 1.717 0 3.375-0.271 4.928-0.804 1.46-0.502 2.76-1.211 3.863-2.108 2.069-1.681 3.209-3.843 3.209-6.088s-1.14-4.407-3.209-6.088c-1.104-0.897-2.404-1.606-3.863-2.108-1.553-0.534-3.211-0.804-4.928-0.804zM16 2v0c8.837 0 16 5.82 16 13s-7.163 13-16 13c-0.849 0-1.682-0.054-2.495-0.158-3.437 3.437-7.539 4.053-11.505 4.144v-0.841c2.142-1.049 4-2.961 4-5.145 0-0.305-0.024-0.604-0.068-0.897-3.619-2.383-5.932-6.024-5.932-10.103 0-7.18 7.163-13 16-13z"></path>
-            </symbol>
-
-            <symbol id="icon-play" viewBox="0 0 32 32">
-                <title>play</title>
-                <path d="M6 4l20 12-20 12z"></path>
-            </symbol>
-
-            <symbol id="icon-pause" viewBox="0 0 32 32">
-                <title>pause</title>
-                <path d="M4 4h10v24h-10zM18 4h10v24h-10z"></path>
-            </symbol>
-        </svg>
 		<header class="masthead constrain">
             <div class="masthead__wrapper">
                 <div class="masthead-bar">
-
                     <a href="index.html">
                         <h1 class="masthead-title">Agustin Garcia Flores</h1>
                     </a>
@@ -82,53 +41,48 @@
                         </span>
 
                         <span class="masthead-bar__menu-item">
-                        <a class="link" href="projects/">Projects</a>
+                        <a class="link" href="blog/blog.html">Notes</a>
                         </span>
-
                     </div>
-
                 </div>
-
             </div>  
-
         </header>
-
 		<main id="main" role="main" class="main">
             <div class="about">
 
                 <p class="description">
-                Graduate Student<br>
-                Department of Physics<br>
-                College of Natural Sciences<br>
-                University of Massachusetts Amherst
+                    Graduate Student<br>
+                    Department of Physics<br>
+                    College of Natural Sciences<br>
+                    University of Massachusetts Amherst
                 </p>
 
                 <h3>Research interests</h3>
                 <p>
-                Quantum networks, quantum cryptography<br>
+                    Quantum networks, quantum cryptography<br>
                 </p>
 
                 <h3>Education</h3>
                 <p>
-                <img src="images/asu.png" alt="mit" class="logo">
-                Arizona State University, August 2022 – May 2024<br>
-                BS, Department of Physics<br>
-                BA, School of Mathematical and Statistical Sciences
+                    <img src="images/asu.png" alt="mit" class="logo">
+                    Arizona State University, August 2022 – May 2024<br>
+                    BS, Department of Physics<br>
+                    BA, School of Mathematical and Statistical Sciences
                 </p>
                 <p>
-                <img src="images/nau.png" alt="technion" class="logo">
-                Northern Arizona University, January 2022 – May 2022<br>
-                Transfer Student, Department of Applied Physics and Materials Science
+                    <img src="images/nau.png" alt="technion" class="logo">
+                    Northern Arizona University, January 2022 – May 2022<br>
+                    Transfer Student, Department of Applied Physics and Materials Science
                 </p>
                 <p>
-                <img src="images/emcc.png" alt="carnegie mellon university" class="logo">
-                Estrella Mountain Community College, August 2020 – December 2021<br>
-                AS, Emphasis in Physics
+                    <img src="images/emcc.png" alt="carnegie mellon university" class="logo">
+                    Estrella Mountain Community College, August 2020 – December 2021<br>
+                    AS, Emphasis in Physics
                 </p>
                 <p>
-                <img src="images/emcc.png" alt="peking university" class="logo">
-                Estrella Mountain Community College, August 2017 – December 2019<br>
-                Associate in Business, General Requirements
+                    <img src="images/emcc.png" alt="peking university" class="logo">
+                    Estrella Mountain Community College, August 2017 – December 2019<br>
+                    Associate in Business, General Requirements
                 </p>
 
                 <h3>Contact</h3>
@@ -137,13 +91,5 @@
                 </p>
             </div>
         </main>
-
-        <!-- <footer class="iceberg"></footer> -->
-        
-
-        <!-- MathJax -->
-        <script type="text/javascript" async
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
-        </script>
 	</body>
 </html>
