Updated jupyter.css and initiated images.html
The styling changed on jupyter notebook converion to html, so I had to update my styling.
I also added an 'images.html' file to the main navigation.
I've uploaded the images and updated blog.css to accomodate for the new file.
I anticipate issues in page loading time since I've got all images on one page, so I will look into how to take care of that.

--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
 
                 <h3>Education</h3>
                 <p>
-                    <img src="images/asu.png" alt="mit" class="logo">
+                    <img src="images/misc/asu.png" alt="mit" class="logo">
                     Arizona State University, August 2022 – May 2024<br>
                     BS, Department of Physics<br>
                     BA, School of Mathematical and Statistical Sciences
                 </p>
                 <p>
-                    <img src="images/nau.png" alt="technion" class="logo">
+                    <img src="images/misc/nau.png" alt="technion" class="logo">
                     Northern Arizona University, January 2022 – May 2022<br>
                     Transfer Student, Department of Applied Physics and Materials Science
                 </p>
                 <p>
-                    <img src="images/emcc.png" alt="carnegie mellon university" class="logo">
+                    <img src="images/misc/emcc.png" alt="carnegie mellon university" class="logo">
                     Estrella Mountain Community College, August 2020 – December 2021<br>
                     AS, Emphasis in Physics
                 </p>
                 <p>
-                    <img src="images/emcc.png" alt="peking university" class="logo">
+                    <img src="images/misc/emcc.png" alt="peking university" class="logo">
                     Estrella Mountain Community College, August 2017 – December 2019<br>
                     Associate in Business, General Requirements
                 </p>
