--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </span>
 
                         <span class="masthead-bar__menu-item">
-                        <a class="link" href="blog/blog.html">Notes</a>
+                        <a class="link" href="blog/blog.html">ppp</a>
                         </span>
                     </div>
                 </div>
@@ -62,26 +62,16 @@
                     Quantum networks, quantum cryptography<br>
                 </p>
 
-                <h3>Education</h3>
+                <h3>Short Education</h3>
                 <p>
-                    <img src="images/asu.png" alt="mit" class="logo">
-                    Arizona State University, August 2022 – May 2024<br>
+                    <img src="images/asu.png" alt="ASU" class="logo">
+                    Arizona State University, May 2024<br>
                     BS, Department of Physics<br>
                     BA, School of Mathematical and Statistical Sciences
                 </p>
                 <p>
-                    <img src="images/nau.png" alt="technion" class="logo">
-                    Northern Arizona University, January 2022 – May 2022<br>
-                    Transfer Student, Department of Applied Physics and Materials Science
-                </p>
-                <p>
-                    <img src="images/emcc.png" alt="carnegie mellon university" class="logo">
-                    Estrella Mountain Community College, August 2020 – December 2021<br>
-                    AS, Emphasis in Physics
-                </p>
-                <p>
-                    <img src="images/emcc.png" alt="peking university" class="logo">
-                    Estrella Mountain Community College, August 2017 – December 2019<br>
+                    <img src="images/emcc.png" alt="EMCC" class="logo">
+                    Estrella Mountain Community College, December 2019<br>
                     Associate in Business, General Requirements
                 </p>
 
