Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <h3>Contacto</h3>
                 <p>
-                <strong>Correo electrónico:</strong> agarciaflores [arroba] umass [punto] edu<br>
+                <strong>Correo electrónico:</strong> agarciaflore [arroba] umass [punto] edu<br>
                 </p>
             </div>
         </main>
