Actualizar index.html

--- a/en/index.html
+++ b/en/index.html
@@ -77,7 +77,7 @@
 
                 <h3>Contact</h3>
                 <p>
-                <strong>Email:</strong> agarciaflores [at] umass [dot] edu<br>
+                <strong>Email:</strong> agarciaflore [at] umass [dot] edu<br>
                 </p>
             </div>
         </main>
