--- a/research/index.html
+++ b/research/index.html
@@ -4,8 +4,8 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>Group Name</title>
-        <link rel=stylesheet href=main.css>
+        <title>Research & Publications | Group Name</title>
+        <link rel=stylesheet href=../main.css>
     </head>
     <body>
         <nav aria-label="main navigation">
