Updated group site

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
         <main>
             <section id=about>
-                <img src=# alt="Group picture">
+                <img src="images/group.jpg" alt="Group picture">
                 <div class=text-content>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
