fixed a few things

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="menu-collapse">
                 <ul>
                     <li>
-                        <a href="/research/">Research & Publications </a>
+                        <a href="/research/">Research</a>
                     </li>
                     <li>
                         <a href="/members/">Members</a>
