--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>Research & Publications | Group Name</title>
+        <title>Research | Group Name</title>
         <link rel=stylesheet href=../main.css>
     </head>
     <body>
@@ -18,7 +18,7 @@
             <div class="menu-collapse">
                 <ul>
                     <li>
-                        <a href="/research/">Research & Publications </a>
+                        <a href="/research/">Research</a>
                     </li>
                     <li>
                         <a href="/members/">Members</a>
