Added Luc to 'Members' page

--- a/members/index.html
+++ b/members/index.html
@@ -94,7 +94,7 @@
 
             </section>
             <section id="team-section">
-                <h2>PhD Students</h2>
+                <h2>Graduate Students</h2>
 
                 <div class="team-member">
                     <img src="images/pfp.png" alt="Snehasis Addy">
@@ -110,6 +110,23 @@
                     </p>
                     <div class="links">
                         <a href="#">Homepage</a> | <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/snehasis-addy-b49362166">LinkedIn</a> | <a href="#">GitHub</a>
+                    </div>
+                </div>
+
+                <div class="team-member">
+                    <img src="images/pfp.png" alt="Snehasis Addy">
+                    <h3>Luc Barrett</h3>
+                    <p>Manning College of Information and Computer Sciences</p>
+                    <p id="bio">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla lacinia posuere consequat.
+                        Integer elementum vel nulla quis vestibulum.
+                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
+                        Aenean at accumsan enim.
+                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    </p>
+                    <div class="links">
+                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a> | <a href="#">GitHub</a>
                     </div>
                 </div>
 
